<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

<!--   <parent> -->
<!--     <groupId>org.jodreports.poms</groupId> -->
<!--     <artifactId>jodreports-parent</artifactId> -->
<!--     <version>1</version> -->
<!--   </parent> -->

  <!-- <groupId>org.jodreports</groupId> -->
  <groupId>barryspearce</groupId>
  <artifactId>jodreports-library</artifactId>
  <version>4.0.0</version>

  <name>JODReports :: Library</name>
  <description>JODReports generates dynamic documents and reports based on the OpenDocument Format and FreeMarker.</description>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  <url>http://jodreports.org/</url>

  <licenses>
    <license>
      <name>GNU Lesser General Public License, Version 2.1</name>
      <url>http://www.gnu.org/licenses/lgpl.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>mnasato</id>
      <name>Mirko Nasato</name>
      <email>mirko@artofsolving.com</email>
      <roles>
        <role>founder</role>
        <role>eremitus</role>
      </roles>
    </developer>
    <developer>
      <id>terryliang</id>
      <name>Yongtai Liang</name>
      <email>terry@poloniouslive.com</email>
    </developer>
    <developer>
      <id>ansgarkonermann</id>
      <name>Ansgar Konermann</name>
      <email>ansgar.konermann@googlemail.com</email>
    </developer>
    <developer>
      <id>jacobf</id>
      <name>Jacob Fahrenkrug</name>
      <email>jacob.fahrenkrug@googlemail.com</email>
    </developer>
    <developer>
      <id>bpearce</id>
      <name>Barry Pearce</name>
      <email>barryspearce@hotmail.com</email>
    </developer>
  </developers>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.26</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
    </dependency>
    <dependency>
      <groupId>org.freemarker</groupId>
      <artifactId>freemarker</artifactId>
      <version>2.3.28</version>
    </dependency>
    <dependency>
      <groupId>xom</groupId>
      <artifactId>xom</artifactId>
      <version>1.3.2</version>
      <exclusions>
        <exclusion>
          <groupId>xalan</groupId>
          <artifactId>xalan</artifactId>
        </exclusion>
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xercesImpl</artifactId>
        </exclusion>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
      <version>4.12</version>
    </dependency>
  </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<optimize>true</optimize>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

  <scm>
    <url>https://github.com/jodreports</url>
    <connection>scm:git:git@github.com:jodreports/jodreports-library.git</connection>
    <developerConnection>scm:git:git@github.com:jodreports/jodreports-library.git</developerConnection>
  </scm>

 
</project>
